<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.example.rob.Hypeman.MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></RelativeLayout>

    <TextView
        android:id="@+id/nextRoot"
        android:layout_width="110dp"
        android:layout_height="32dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/Next"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/rootButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/guideline14"
        app:layout_constraintVertical_bias="0.478" />


    <Button
        android:id="@+id/rootButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.7"
        android:gravity="center"
        android:onClick="pressRoot"
        android:text="@string/roots"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/guideline2"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".12"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".35" />

    <Button
        android:id="@+id/lyricButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.7"
        android:gravity="center"
        android:onClick="pressLowerLyric"
        android:text="@string/lyrics"

        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="@+id/guideline2"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".12"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".35" />

    <Button
        android:id="@+id/lastLyric"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.7"
        android:gravity="center"
        android:onClick="pressLast"
        android:text="@string/Last"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".12"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/guideline3"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".35" />

    <Button
        android:id="@+id/nextLyric"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.7"
        android:gravity="center"
        android:onClick="pressNext"
        android:text="@string/Next"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".12"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/guideline3"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".35" />

    <Button
        android:id="@+id/centerButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.7"
        android:onClick="pressLyric"
        android:text="@string/More"
        app:layout_constraintBottom_toTopOf="@+id/lyricButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintStart_toEndOf="@+id/lastLyric"
        app:layout_constraintTop_toBottomOf="@+id/rootButton"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".18" />


    <android.support.constraint.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.60" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.00" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.125"/>


    <android.support.constraint.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <fragment
        android:id="@+id/youtubeplayerfragment"
        android:name="com.google.android.youtube.player.YouTubePlayerFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".20"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline15"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="1" />



</android.support.constraint.ConstraintLayout>